hydra/test/test_examples/type_errors/undeclared_var.tpc

init {
    x = 5;
} 
telemetry {} 
check {}